# Programs_sem

./: README.md
1_contest/: CMakeLists.txt  amount_1.cpp  kratno_13.cpp  nok.cpp  pryamougol.cpp  romb.cpp  simple_chislo.cpp  treugolnik.cpp
1_sem_encapsulation/: 1.cpp  CMakeLists.txt  GasHolder.cpp  SpacePort.cpp  h_w_1_sem.cpp  happy_train.cpp
2_contest/: binary.cpp  factorial.cpp  get_a_letter.cpp  leveling.cpp  sum_of_numbers.cpp
3_contest/: CMakeLists.txt  bolshe_sred_arifmet.cpp  max_in_array.cpp  max_in_array_1.cpp  max_stolbec.cpp  protoss.cpp  sort.cpp  vector_sum.cpp
4_contest/: amount_money.cpp  money_hard.cpp
4_sem_polymorphism/: ConvoyManager.cpp
5_contest/: building_1.cpp  path.cpp  path_1.cpp  sum.cpp
6_contest/: 0.cpp  2.cpp  CMakeLists.txt  equal.cpp  get_10_ints.cpp  sum.cpp  swap_arrays.cpp
7_contest/: 0.cpp  4.cpp  7.cpp
All_KR_1_semesters/Dop_KR/: 04_invisibike.cpp  09_takemura.cpp
All_KR_1_semesters/KR2018/: CMakeLists.txt  tetrahedron.cpp
All_KR_1_semesters/KR2018_2/: CMakeLists.txt  name.txt  trajectory.cpp
All_KR_1_semesters/KR2019/: cylinders.cpp  goblins.cpp  rabbitrain.cpp  race.cpp  river.cpp  stratrix.cpp
All_KR_1_semesters/KR2019_2/: CMakeLists.txt  fedcats.cpp  fitnesscat.cpp  foodforce.cpp  petnames.cpp  reedcat.cpp
All_KR_1_semesters/KR2020/: 04_matrix.cpp  07_sky.cpp
All_KR_1_semesters/KR2020_2/: 01_average.cpp  04_week.cpp  05_swap.cpp  06_fix.cpp
All_KR_1_semesters/KR2021/: 01.cpp  02.cpp  05.cpp
All_KR_1_semesters/KR_2021_2/: CMakeLists.txt  first.cpp  fouth.cpp
Contests_1_semestr/1_contest/: amount_chisel.cpp  bin.cpp  bin_1.cpp  factorial.cpp  max_element.cpp  mnogiteli.cpp  pustoy_pramougol.cpp
Contests_1_semestr/2_contest/: CMakeLists.txt  fibonacci.cpp  get_a_hexadecimal.cpp  get_really_any_hexadecimal.cpp  is_a_number.cpp  is_simple.cpp  nonacci.cpp  sum.cpp
Contests_1_semestr/3_contest/: reverse_stroka.cpp  transpose_matrix.cpp  transpose_matrix_m_n.cpp  transpose_picture.cpp
Contests_1_semestr/4_contest/: CMakeLists.txt  hatgit.cpp  search_rec.cpp  subtrack_money.cpp
Contests_1_semestr/5_contest/: CMakeLists.txt  building.cpp  buildings.cpp
Contests_1_semestr/6_contest/: 3.cpp  copy_array_reverse.cpp  equal_9.cpp  sum_elem_array.cpp
Contests_1_semestr/7_contest/: 1.cpp  3.cpp  6.cpp  8.cpp  CMakeLists.txt  do_some_work.cpp  example.cpp  transpose.cpp
Dop_KR/: 02_flying_cars.cpp  03_T_pose.cpp  05_perales.cpp  08_delamain.cpp  CMakeLists.txt  main.cpp
KR2018/: matrix.cpp  squirrel.cpp
KR2018_2/: copyreverse.cpp  oddeven.cpp  rot13.cpp  sensor.cpp  stepback.cpp
KR2019/: CMakeLists.txt  dumbell.cpp
KR2019_2/: catfarm.cpp
KR2020/: 01.cpp  02.cpp  02_andromeda.cpp  03_masseffect.cpp  05_interstellar.cpp  06_hadgit.cpp  CMakeLists.txt
KR2020_2/: 02_div_by_eleven.cpp  03_reviews.cpp  CMakeLists.txt
KR2021/: 03.cpp  04.cpp  06.cpp  CMakeLists.txt
KR_2021_2/: second.cpp  third.cpp
Lessons_2_semester/10_sem_exeptions/: CMakeLists.txt  Theory.md  class_fraction.cpp  main.cpp  second_max_elem.cpp
Lessons_2_semester/1_sem_encapsulation/: example.cpp
Lessons_2_semester/2_sem_inheritance/: CMakeLists.txt  Material.cpp  Player.cpp  ZooKeeper.cpp
Lessons_2_semester/3_sem_inheritance/: CMakeLists.txt  MyEngine.cpp  SmartCat.cpp  Storage.cpp  h_w.cpp
Lessons_2_semester/4_sem_polymorphism/: CMakeLists.txt  Player.cpp  Predator.cpp  h_w.cpp
Lessons_2_semester/5_sem_algorithms/: CMakeLists.txt  Students.cpp  Vector_2D.cpp  Vector_ND.cpp  h_w_practice.cpp  h_w_theory.md
Lessons_2_semester/6_sem_random_exeptions/: CMakeLists.txt  exception.cpp  petrol_station.cpp
Lessons_2_semester/7_sem_parallel/: CMakeLists.txt  LMT.cpp  Theory.md  Vector2D.cpp  check_them.cpp  get_min_value.cpp  h_w.cpp  main.cpp  timer.cpp
Lessons_2_semester/9_sem_practice/: CMakeLists.txt  Theory.md  h_w.cpp  practice.cpp
Lessons_2_semester/KR_2021/: Gas_station.cpp  Mixed_strings.cpp  Piggy_bank.cpp  Some_balls.cpp  Sphere.cpp  Unique_max_elem.cpp
Lessons_2_semester/LMS_STL_1/: Analysis_Load.cpp  Analysis_Load.h  CMakeLists.txt  Person.cpp  Results_Table.cpp  main.cpp
Lessons_2_semester/LMS_STL_2/: Animals.cpp  CMakeLists.txt  Connection.cpp  Session_Manager.cpp  Telemetry_Controller.cpp  Tracker.cpp  main.cpp
Lessons_2_semester/LMS_STL_3/: CMakeLists.txt  comparison_sequences.cpp  delete_elem.cpp  ex.cpp  intersection_sequences.cpp  main.cpp  odd_even_num.cpp  revers_sequence.cpp
Lessons_2_semester/LMS_exceptions/: Common_brain.cpp  Smart_storage.cpp  Unstable_connection.cpp
SummerTraining/: Polynomial.cpp  Polynomial_2.0.cpp  README.md
example-map/: main.cpp
laba1_2_2/: CMakeLists.txt  main.cpp
map(home_work_2)/: CMakeLists.txt  map(Home_Work_2).cpp
some_structs/example-map/: CMakeLists.txt
some_structs/struct-stack/: CMakeLists.txt
struct-vector/: CMakeLists.txt
training/: CMakeLists.txt
