cmake_minimum_required(VERSION 3.20)
project(1_sem_2022)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_sem_2022 main.cpp)
add_executable(1 1.cpp)
add_executable(example example.cpp)
add_executable(happy_train happy_train.cpp)
add_executable(GasHolder GasHolder.cpp)
add_executable(SpacePort SpacePort.cpp)
add_executable(h_w_1_sem h_w_1_sem.cpp)
