cmake_minimum_required(VERSION 3.20)
project(Dop_KR)

set(CMAKE_CXX_STANDARD 17)

add_executable(Dop_KR main.cpp)
add_executable(02_flying_cars 02_flying_cars.cpp)
add_executable(03_T_pose 03_T_pose.cpp)
add_executable(04_invisibike 04_invisibike.cpp)
add_executable(09_takemura 09_takemura.cpp)
add_executable(05_perales 05_perales.cpp)
add_executable(08_delamain 08_delamain.cpp)
