cmake_minimum_required(VERSION 3.20)
project(KR2019)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR2019 main.cpp)
add_executable(goblins goblins.cpp)
add_executable(race race.cpp)
add_executable(cylinders cylinders.cpp)
add_executable(rabbitrain rabbitrain.cpp)
add_executable(dumbell dumbell.cpp)
add_executable(stratrix stratrix.cpp)
add_executable(river river.cpp)
