cmake_minimum_required(VERSION 3.20)
project(KR2020)

set(CMAKE_CXX_STANDARD 17)

add_executable(01_lunar_race 02.cpp)
add_executable(03_masseffect 03_masseffect.cpp)
add_executable(02_andromeda 02_andromeda.cpp)
add_executable(05_interstellar 05_interstellar.cpp)
add_executable(07_sky 07_sky.cpp)
add_executable(04_matrix 04_matrix.cpp)
add_executable(06_hadgit 06_hadgit.cpp)
