cmake_minimum_required(VERSION 3.20)
project(KR2020_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR2020_2 main.cpp)
add_executable(01_average 01_average.cpp)
add_executable(02_div_by_eleven 02_div_by_eleven.cpp)
add_executable(03_reviews 03_reviews.cpp)
add_executable(04_week 04_week.cpp)
add_executable(06_fix 06_fix.cpp)
