cmake_minimum_required(VERSION 3.20)
project(KR2019_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR2019_2 main.cpp)
add_executable(foodforce foodforce.cpp)
add_executable(fitnesscat fitnesscat.cpp)
add_executable(fedcats fedcats.cpp)
add_executable(catfarm catfarm.cpp)
add_executable(reedcat reedcat.cpp)
