cmake_minimum_required(VERSION 3.20)
project(KR_2021_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR_2021_2 main.cpp)
add_executable(first first.cpp)
add_executable(second second.cpp)
add_executable(third third.cpp)
add_executable(fouth fouth.cpp)
add_executable(fifth fifth.cpp)
add_executable(sixth sixth.cpp)
