cmake_minimum_required(VERSION 3.20)
project(4_contest)

set(CMAKE_CXX_STANDARD 17)

add_executable(4_contest main.cpp)
add_executable(subtrack_money subtrack_money.cpp)
add_executable(amount_money amount_money.cpp)
add_executable(hatgit hatgit.cpp)
add_executable(search_rec search_rec.cpp)
add_executable(money_hard money_hard.cpp)
