cmake_minimum_required(VERSION 3.21)
project(7_sem_parallel)

set(CMAKE_CXX_STANDARD 17)

add_executable(7_sem_parallel main.cpp)
add_executable(get_min_value get_min_value.cpp)
add_executable(check_them check_them.cpp)
add_executable(Vector2D Vector2D.cpp)
add_executable(LMT LMT.cpp)
add_executable(h_w h_w.cpp)
add_executable(timer timer.cpp)
