cmake_minimum_required(VERSION 3.21)
project(LMS_STL_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(LMS_STL_3 main.cpp)
add_executable(revers_sequence revers_sequence.cpp)
add_executable(comparison_sequences comparison_sequences.cpp)
add_executable(intersection_sequences intersection_sequences.cpp)
add_executable(delete_elem delete_elem.cpp)
add_executable(odd_even_num odd_even_num.cpp)
add_executable(ex ex.cpp)
